--- a/src/public/css/tambox.css
+++ b/src/public/css/tambox.css
@@ -639,7 +639,7 @@ li{
   height: 100%;
   opacity: 1;
   z-index: 10;
-  display: none;
+  /* display: none; */
   margin: 0 auto;
 }
 #overlay2 {
@@ -1118,6 +1118,11 @@ li{
  #texto_popoup{
    font-size: 24px;
    grid-row: 3 / span 1;
+   grid-column: 2 / span 1;
+ }
+ #mensaje_proceso{
+   font-size: 24px;
+   grid-row: 4 / span 1;
    grid-column: 2 / span 1;
  }
  }
