--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -3,7 +3,7 @@
   //var remote_TBM = io.connect('http://192.168.1.6:3000');
   var is_connected = false;
   var mydata;
-
+  var online= false;
   $(document).ready(function() {
     cargar_pantalla_guardada();
     $("#TBM_icon").css('visibility', 'hidden');
@@ -76,9 +76,7 @@
 /////////////////////////////////////////////////////////////////////
     enlace_a("config");
     enlace_a("security_page");
-
     enlace_a("retiro_en_proceso");
-
   //  enlace_a("info");
 //    enlace_a("cuadre_diario");
 //    enlace_a("cifras_generales");
@@ -87,14 +85,11 @@
     enlace_a("Smart_emptied");
     enlace_a("cashbox_unlocked");
     enlace_a("Cashbox_Back_in_Service");
-
   //  enlace_a("iniciar_nueva_remesa");
     mandar_orden_sin_link("close_serial_port");
     mandar_orden_sin_link("open_serial_port");
     mandar_orden_sin_link("initialize_validator");
     mandar_orden_sin_link("send_synch");
-
-
     mandar_orden_sin_link("request_support_online");
     mandar_orden_sin_link("reconectar_validador");
     mandar_orden_sin_link("lock_cashbox");
@@ -144,16 +139,15 @@
      mandar_orden_sin_link("lock_machine");
 
 
-         socket.on('logeando_a_client_side', function(msg) {
-           ion.sound.play("saldo_insuficiente");
+    socket.on('logeando_a_client_side', function(msg) {
+           ion.sound.play("water_droplet");
+           // display_message(msg);
            console.log(msg);
          });
-
-     socket.on('lock_machine', function(msg) {
+    socket.on('lock_machine', function(msg) {
        console.log("locking machine");
          $('#overlay, #overlay-back').fadeIn(500);
      });
-
     socket.on('iniciando', function(msg) {
       console.log("refrescando pantallas");
       window.location.replace("/");
@@ -166,13 +160,8 @@
     //   console.log("reading yeah!!");
     //  display_message(msg);
     // });
-    socket.on('nuevo_billete_recivido', function(msg){
-      console.log("nuevo_billete_recivido"+JSON.stringify(msg));
-      document.getElementById("qty_bill").innerHTML = msg.qty_bill2;
-      document.getElementById("depositado").innerHTML = msg.monto_total_remesa;
-      display_message(msg.monto +" "+ msg.country_code+" "+msg.qty_bill2);
 
-    });
+
     /////////////////////////////////////////////////////////////////////
     // socket.on('Cashbox_out_of_Service', function(msg) {
     //   //display_system_running_indicator();
@@ -186,6 +175,7 @@
     socket.on('system_running_indicator', function(msg) {
       display_system_running_indicator();
       online = true;
+      console.log("system running ok");
     });
     function display_system_running_indicator() {
       $("#system_running_indicator").show();
@@ -205,6 +195,10 @@
     });
     socket.on('show_not_connected', function(msg) {
       is_connected = false;
+    });
+    socket.on('display_message_socket', function(msg) {
+      display_message(msg);
+      console.log(msg);
     });
     function clear_conection_to_TBM() {
       timer_de_display_remote_conection_to_tbm = setTimeout(function() {
@@ -244,16 +238,57 @@
       setTimeout(clear_message, 5000);
     };
     function clear_message() {
-    //  document.getElementById("message2").innerHTML = "";
+      document.getElementById("message2").innerHTML = "";
     //  document.getElementById("msg1").innerHTML = "Bloqueado";
     };
     //////////////////////////////////////////
+    function updateStatus(variable) {
+      if (!variable) {
+        document.getElementById('display').style.display = 'none';
+        document.getElementById('loading').style.display = 'inline';
+        //  ion.sound.play("un_momento_porfavor");
+      } else {
+        document.getElementById('loading').style.display = 'none';
+        document.getElementById('display').style.display = 'inline';
+      //  ion.sound.play("tambox_manager_is_online");
+      }
+      online = false;
+      control(online);
+    }
+    // /////////////////////////////////////////////////////////////
+    var tim;
+    function control(variable) {
+      tim = setTimeout(function() {
+        updateStatus(online);
+      }, 1000);
+    }
+    control(online);
+    /////////////////////////////////////////////////////////////
   });
+
+
 </script>
 
 
 <body oncontextmenu="return false">
-  <div id="loading" style="display:none"> <br>Error:<br/>El servidor esta paralizado.</div>
+  <!-- <div id="loading" style="display:none"> <br>Error:<br/>El servidor esta paralizado.</div> -->
+
+  <div  class="popup" id="loading" style="display:none">
+    <!-- <div class="overlay-back"></div> -->
+    <div id="inicializando_sistema">
+      <div class="grupo3">
+        <div></div>
+        <div id="titulo_popup">Inicializando Sistema</div>
+        <div id="texto_popoup">Espere un momento se esta inicializando el sistema</div>
+        <div id="mensaje_proceso"><div id="message2"></div></div>
+        <div><a class="ec_btn" id="close_serial_port">cerrar puerto serial</a> </div>
+        <div><a class="ec_btn" id="open_serial_port">abrir puerto serial</a> </div>
+        <div><a class="ec_btn" id="initialize_validator">inicializar validador</a> </div>
+
+      </div>
+    </div>
+
+  </div>
   <div class="display_rasp" id="display">
     <div class="wrapperx" id="pizarra">
       <!-- ESTO SE LLENA EN LINEA CON LA INFORMACION GUARDADA EN BUFFER.HTML -->
