--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -152,7 +152,6 @@
             document.getElementById('msg11').innerHTML="Tire de la manija suavemente pero con firmeza, hasta retirar el cajon del dinero.";
           }
     });
-
     socket.on('Cashbox_Back_in_Service', function(msg) {
       $('#out_of_service').fadeOut(500);
       $('#overlay, .overlay-back').fadeOut(500);
@@ -165,31 +164,24 @@
             $('#overlay, #overlay-back').fadeOut(500);
           }
     });
-
-
     socket.on('iniciando_remesa', function(msg) {
       ion.sound.play("iniciando_remesa");
     });
-
     socket.on('remesa_finalizada', function(msg) {
       ion.sound.play("remesa_finalizada");
     });
-
     socket.on('realizando_pago', function(msg) {
       ion.sound.play("realizando_pago");
     });
-
     socket.on('pago_completado', function(msg) {
       ion.sound.play("pago_completado");
     });
     socket.on('monto_exacto', function(msg) {
       ion.sound.play("monto_exacto");
     });
-
     socket.on('un_momento_porfavor', function(msg) {
       ion.sound.play("un_momento_porfavor");
     });
-
     socket.on('anuncio_nueva_remesa_hermes', function(msg) {
       ion.sound.play("anuncio_nueva_remesa_hermes");
     });
@@ -199,9 +191,8 @@
     socket.on('anuncio_saldo_insuficiente', function(msg) {
       ion.sound.play("saldo_insuficiente");
     });
-
     socket.on('logeando_a_client_side', function(msg) {
-      ion.sound.play("saldo_insuficiente");
+      ion.sound.play("water_droplet");
       console.log(msg);
     });
 
@@ -221,13 +212,13 @@
 //    ion.sound.play("sync_ok"); //sincronizacion satisfactoria con tambox manager
 //    ion.sound.play("nueva_remesa"); //iniciando nueva remesa
 
-//    ion.sound.play("tambox_manager_is_online"); //tambox_manager_is_online
-  //  ion.sound.play("un_momento_porfavor"); //tambox_manager_is_online
+  //  ion.sound.play("tambox_manager_is_online"); //tambox_manager_is_online
+//    ion.sound.play("un_momento_porfavor"); //tambox_manager_is_online
 //    ion.sound.play("anuncio_nueva_remesa_hermes"); //tambox_manager_is_online
 //    ion.sound.play("iniciando_remesa_hermes"); //tambox_manager_is_online
 //    ion.sound.play("saldo_insuficiente"); //tambox_manager_is_online
 
-ion.sound.play("water_droplet"); //tambox_manager_is_online
+//ion.sound.play("water_droplet"); //tambox_manager_is_online
 
 //    ion.sound.play("tambox_has_started"); //tambox_manager_is_online
 //  await ion.sound.play("a_user_has_connected"); //a_user_has_connected
@@ -235,6 +226,7 @@ ion.sound.play("water_droplet"); //tambox_manager_is_online
   // ion.sound.play("monto_exacto");
     });
   </script>
+
   <style media="screen">
     .overlay-back {
     position: absolute;
