no perfecto, pero estable para entregar en tienda.

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="css/favicon.ico" type="image/x-icon">
   <link rel="icon" href="css/favicon.ico" type="image/x-icon">
   <title>Tambox Machine 1.0</title>
-  <link rel="shortcut icon" href="">
+  <!-- <link rel="shortcut icon" href=""> -->
   <script src="/socket.io/socket.io.js"></script>
   <link href="css/fontawesome/css/all.css" rel="stylesheet" type="text/css">
   <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script> -->
@@ -208,22 +208,20 @@
     //
     // });
     // ion.sound.play("glass");
-  //  ion.sound.play("nuevo_pago"); //nuevo pedido de pago recibido
-//    ion.sound.play("sync_ok"); //sincronizacion satisfactoria con tambox manager
-//    ion.sound.play("nueva_remesa"); //iniciando nueva remesa
+    //ion.sound.play("nuevo_pago"); //nuevo pedido de pago recibido
+    //ion.sound.play("sync_ok"); //sincronizacion satisfactoria con tambox manager
+    //ion.sound.play("nueva_remesa"); //iniciando nueva remesa
 
-  //  ion.sound.play("tambox_manager_is_online"); //tambox_manager_is_online
-//    ion.sound.play("un_momento_porfavor"); //tambox_manager_is_online
-//    ion.sound.play("anuncio_nueva_remesa_hermes"); //tambox_manager_is_online
-//    ion.sound.play("iniciando_remesa_hermes"); //tambox_manager_is_online
-//    ion.sound.play("saldo_insuficiente"); //tambox_manager_is_online
-
-//ion.sound.play("water_droplet"); //tambox_manager_is_online
-
-//    ion.sound.play("tambox_has_started"); //tambox_manager_is_online
-//  await ion.sound.play("a_user_has_connected"); //a_user_has_connected
+    // ion.sound.play("tambox_manager_is_online"); //tambox_manager_is_online
+    //ion.sound.play("un_momento_porfavor"); //tambox_manager_is_online
+    //ion.sound.play("anuncio_nueva_remesa_hermes"); //tambox_manager_is_online
+    //ion.sound.play("iniciando_remesa_hermes"); //tambox_manager_is_online
+    //ion.sound.play("saldo_insuficiente"); //tambox_manager_is_online
+    //ion.sound.play("water_droplet"); //tambox_manager_is_online
+    // ion.sound.play("tambox_has_started"); //tambox_manager_is_online
+    //await ion.sound.play("a_user_has_connected"); //a_user_has_connected
    //a_user_has_connected
-  // ion.sound.play("monto_exacto");
+   // ion.sound.play("monto_exacto");
     });
   </script>
 
