--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -280,7 +280,7 @@
         <div></div>
         <div id="titulo_popup">Inicializando Sistema</div>
         <div id="texto_popoup">Espere un momento se esta inicializando el sistema</div>
-        <div id="mensaje_proceso"><div id="message2"></div></div>
+        <div id="mensaje_proceso"><div id="message2x"></div></div>
         <div><a class="ec_btn" id="close_serial_port">cerrar puerto serial</a> </div>
         <div><a class="ec_btn" id="open_serial_port">abrir puerto serial</a> </div>
         <div><a class="ec_btn" id="initialize_validator">inicializar validador</a> </div>
