--- a/src/public/css/tambox.css
+++ b/src/public/css/tambox.css
@@ -197,7 +197,7 @@ li{
 .grupo2{
   grid-column: 1/5;
   min-height:350px;
-  /* height: auto; */
+  height: 90vh;
   background-image: url("../img/bg_image4.jpg");
   /* background-image: url("../img/bg_tambox.png"); */
 
@@ -969,7 +969,7 @@ li{
     /* grid-column-start: span 2; */
     border-radius: 12px;
     border: 1.5px solid rgb(50, 50, 50);
-    padding: 10px;
+    /* padding: 10px; */
     margin:15px;
     filter: drop-shadow(1px 1px 15px #000000);
     text-align: center;
@@ -1033,12 +1033,12 @@ li{
     /* margin:20px; */
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    /* grid-template-rows: repeat(2, 1fr); */
+    /* grid-template-rows: auto 1fr auto; */
     grid-column-gap: 30px;
     grid-row-gap: 20px;
 
     /* grid-column:1; */
-    min-height:80vh;
+    min-height:92vh;
     background-image: linear-gradient(to bottom, rgb(23, 22, 22),rgba(33,33,33));
     /* background-image: url("../img/bg_image4.jpg"); */
     color: white;
@@ -1125,4 +1125,49 @@ li{
    grid-row: 4 / span 1;
    grid-column: 2 / span 1;
  }
+ #grafico_chart{
+   grid-column-start: 2;
+   grid-row-start: 2;
+ }
+ .chartjs-render-monitor{
+  width: 80vh;
+  height: 80vh;
+
+ }
+
+ .teclado{
+   margin:10px;
+   display:grid;
+   grid-template-columns: repeat(3, auto);
+   grid-template-rows: repeat(3, auto);
+   justify-items: stretch;
+   grid-gap:25px;
+ }
+ .boton_teclado{
+   color:white;
+   font-size:60px;
+   background:rgb(48, 48, 48);
+   border: 2px solid white;
+   text-align:center;
+ }
+ .pass_screen{
+   grid-column-start: 1;
+   grid-column-end: 4;
+   color:white;
+   font-size:60px;
+   background:rgb(48, 48, 48);
+   border: 2px solid white;
+   text-align:center;
+ }
+ #validating{
+   font-size:40px;
+ }
+ #canceling{
+   font-size:20px;
+
+ }
+ #cancel{
+ justify-text: center;
+ }
+
  }
