--- a/src/public/css/tambox_iphone.css
+++ b/src/public/css/tambox_iphone.css
@@ -32,6 +32,7 @@ and (orientation : portrait){
     grid-row-gap: 5px;
     grid-template-rows: minmax(60px,60px) 1fr minmax(60px,60px);
     min-height: 98vh;
+    max-width: 100vw;
     /* max-height: 98vh; */
     color:gray;
     grid-template-areas:
@@ -99,4 +100,258 @@ and (orientation : portrait){
     grid-column-start:span 2;
     min-width: 90vw;
   }
+  .ec_panel{
+    display: grid;
+    color:white;
+    background-image: linear-gradient(to bottom, rgb(23, 22, 22),rgba(53,53,53));
+    grid-gap:5px;
+    filter: drop-shadow(1px 1px 15px #000000);
+    border-radius: 12px;
+    border: 1.5px solid rgb(80,80,80);
+    padding: 5px;
+    margin-bottom: 5px;
+  }
+  .ec_card2{
+      display:grid;
+      /* grid-template-columns: 50% 50%; */
+      background-image: linear-gradient(to bottom, rgba(65,65,65), rgb(43, 43, 43));
+      color:white;
+      /* grid-column-start: span 2; */
+      border-radius: 12px;
+      border: 1.5px solid rgb(50, 50, 50);
+      padding: 10px;
+      margin:15px;
+      filter: drop-shadow(1px 1px 15px #000000);
+      overflow-y: scroll;
+      text-align: center;
+  }
+  .panel1{
+    grid-area:panel1;
+    /* margin:30px; */
+
+    background-color: rgb(20, 143, 9) ;
+    justify-content: center;
+    align-content: center;
+
+  }
+  .panel2{
+    grid-area:panel2;
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(4,1fr);
+    /* margin:30px; */
+    background-color: rgb(101, 43, 9) ;
+    align-content: center;
+  }
+  .resumen{
+    grid-area:resumen;
+    /* margin:30px; */
+    background-color: rgb(201, 143, 9) ;
+    overflow-y: hidden;
+    max-height: 400px;
+  }
+  .resumen2{
+    grid-area:resumen2;
+    /* margin:30px; */
+    background-color: rgb(201, 143, 9) ;
+    overflow-y: hidden;
+    max-height: 400px;
+  }
+  .ec_panel_tarjeta_historial_remesa_hermes_verde{
+    display: grid;
+    /* background-color: rgb(43, 43, 43); */
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+    /* grid-template-rows: 1fr 1fr 1fr; */
+    grid-template-areas:
+    "label_status status label_fecha_creacion fecha_creacion "
+    "label_tebs  numero_de_tebs label_fecha_cierre fecha_cierre"
+    "label_moneda label_monto  label_no_billetes no_billetes";
+
+
+    color:white;
+    /* background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgb(218, 196, 31)); */
+    /* background-image: linear-gradient(to bottom, rgba(80,80,80), rgb(43, 43, 43)); */
+    /* background-image: linear-gradient(to bottom, rgba(53,53,53), rgb(23, 22, 22)); */
+    background-image: linear-gradient(to bottom, rgb(189, 223, 68),rgba(81, 182, 43, 0.6));
+
+    grid-gap:6px;
+    filter: drop-shadow(1px 1px 15px #000000);
+    /* opacity: 0.5; */
+    /* grid-column-start: span 1; */
+    border-radius: 12px;
+    /* border: 1.5px solid rgb(174, 233, 28); */
+    border: 1.5px solid rgb(80,80,80);
+
+    padding: 22px;
+    margin-bottom: 5px;
+    max-height: 400px;
+    overflow-y: scroll;
+  }
+  .ec_panel_tarjeta_historial_remesa_hermes_roja{
+    display: grid;
+    /* background-color: rgb(43, 43, 43); */
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+    /* grid-template-rows: 1fr 1fr 1fr; */
+    grid-template-areas:
+    "label_status status label_fecha_creacion fecha_creacion "
+    "label_tebs  numero_de_tebs label_fecha_cierre fecha_cierre"
+    "label_moneda label_monto   label_no_billetes no_billetes";
+
+
+    color:white;
+    /* background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgb(218, 196, 31)); */
+    /* background-image: linear-gradient(to bottom, rgba(80,80,80), rgb(43, 43, 43)); */
+    /* background-image: linear-gradient(to bottom, rgba(53,53,53), rgb(23, 22, 22)); */
+    background-image: linear-gradient(to bottom,  rgb(64, 22, 22),rgba(53,53,53));
+
+    grid-gap:6px;
+    filter: drop-shadow(1px 1px 15px #000000);
+    /* opacity: 0.5; */
+    /* grid-column-start: span 1; */
+    border-radius: 12px;
+    /* border: 1.5px solid rgb(174, 233, 28); */
+    border: 1.5px solid rgb(80,80,80);
+
+    padding: 22px;
+    margin-bottom: 5px;
+    max-height: 400px;
+    overflow-y: scroll;
+  }
+  .no_billetes{
+    font-weight: bold;
+    font-size: 18px;
+    grid-area: no_billetes;
+  }
+  .label_monto{
+    font-weight: bold;
+    font-size: 18px;
+    grid-area:label_monto;
+  }
+
+  .ec_panel_tarjeta_historial_verde{
+    display: grid;
+    /* background-color: rgb(43, 43, 43); */
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas:
+    "label_no_remesa no_remesa no_remesa no_remesa"
+    "label_tipo tipo label_status status "
+    "label_tebs  numero_de_tebs label_fecha_creacion fecha_creacion"
+    "label_moneda label_monto  label_no_billetes no_billetes";
+
+    color:white;
+    /* background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgb(218, 196, 31)); */
+    /* background-image: linear-gradient(to bottom, rgba(80,80,80), rgb(43, 43, 43)); */
+    /* background-image: linear-gradient(to bottom, rgba(53,53,53), rgb(23, 22, 22)); */
+    background-image: linear-gradient(to bottom, rgb(23, 22, 22),rgba(81, 182, 43, 0.6));
+
+    grid-gap:6px;
+    filter: drop-shadow(1px 1px 15px #000000);
+    /* opacity: 0.5; */
+    /* grid-column-start: span 1; */
+    border-radius: 12px;
+    /* border: 1.5px solid rgb(174, 233, 28); */
+    border: 1.5px solid rgb(80,80,80);
+
+    padding: 5px;
+    margin-bottom: 5px;
+    max-height: 400px;
+    overflow-y: scroll;
+  }
+  .ec_panel_tarjeta_historial_roja{
+    display: grid;
+    /* background-color: rgb(43, 43, 43); */
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas:
+    "label_no_remesa no_remesa no_remesa no_remesa"
+    "label_tipo tipo label_status status "
+    "label_tebs  numero_de_tebs label_fecha_creacion fecha_creacion"
+    "label_moneda label_monto  label_no_billetes no_billetes";
+
+    color:white;
+    /* background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgb(218, 196, 31)); */
+    /* background-image: linear-gradient(to bottom, rgba(80,80,80), rgb(43, 43, 43)); */
+    /* background-image: linear-gradient(to bottom, rgba(53,53,53), rgb(23, 22, 22)); */
+    background-image: linear-gradient(to bottom, rgb(64, 22, 22),rgba(53,53,53));
+
+    grid-gap:6px;
+    filter: drop-shadow(1px 1px 15px #000000);
+    /* opacity: 0.5; */
+    /* grid-column-start: span 1; */
+    border-radius: 12px;
+    /* border: 1.5px solid rgb(174, 233, 28); */
+    border: 1.5px solid rgb(80,80,80);
+
+    padding: 5px;
+    margin-bottom: 5px;
+    max-height: 400px;
+    overflow-y: scroll;
+  }
+  .ec_panel_tarjeta_historial_azul{
+    display: grid;
+    /* background-color: rgb(43, 43, 43); */
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas:
+    "label_no_remesa no_remesa no_remesa no_remesa"
+    "label_tipo tipo label_status status "
+    "label_tebs  numero_de_tebs label_fecha_creacion fecha_creacion"
+    "label_moneda label_monto  label_no_billetes no_billetes";
+
+    color:white;
+    /* background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgb(218, 196, 31)); */
+    /* background-image: linear-gradient(to bottom, rgba(80,80,80), rgb(43, 43, 43)); */
+    /* background-image: linear-gradient(to bottom, rgba(53,53,53), rgb(23, 22, 22)); */
+    background-image: linear-gradient(to bottom, rgb(23, 22, 22),rgba(43, 92, 182, 0.94));
+
+    grid-gap:6px;
+    filter: drop-shadow(1px 1px 15px #000000);
+    /* opacity: 0.5; */
+    /* grid-column-start: span 1; */
+    border-radius: 12px;
+    /* border: 1.5px solid rgb(174, 233, 28); */
+    border: 1.5px solid rgb(80,80,80);
+
+    padding: 5px;
+    margin-bottom: 5px;
+    max-height: 400px;
+    overflow-y: scroll;
+  }
+
+  .teclado{
+    margin:10px;
+    display:grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
+    justify-items: stretch;
+    grid-gap:10px;
+  }
+  .boton_teclado{
+    color:white;
+    font-size:60px;
+    background:rgb(48, 48, 48);
+    border: 2px solid white;
+    text-align:center;
+  }
+  .pass_screen{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    color:white;
+    font-size:60px;
+    background:rgb(48, 48, 48);
+    border: 2px solid white;
+    text-align:center;
+  }
+  #validating{
+    font-size:40px;
+  }
+  #canceling{
+    font-size:20px;
+
+  }
+  #cancel{
+  justify-text: center;
+  }
+
 }
