--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -204,8 +204,8 @@
       ion.sound.play("saldo_insuficiente");
     });
     socket.on('logeando_a_client_side', function(msg) {
-      ion.sound.play("water_droplet");
-      console.log(msg);
+      // ion.sound.play("water_droplet");
+      // console.log(msg);
     });
 
     socket.on('tambox_has_started', function(msg) {
