--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -302,6 +302,7 @@
       <div class="grupo3 panel_oos">
         <div id="titulo_popup">La maquina esta fuera de servicio</div>
         <div id="texto_popoup"></div>
+        <div id="msg11"></div>
       </div>
     </div>
 </div>
